# arl_ws

./: .gitignore  README.md
src/robot_fetch_me_a_beer/: CMakeLists.txt  package.xml  requirements.txt  start_pipeline.sh
src/robot_fetch_me_a_beer/data/: time.txt
src/robot_fetch_me_a_beer/dmp/: grasp_dmp.npz  place_dmp.npz  retrieve_dmp.npz
src/robot_fetch_me_a_beer/launch/: record.launch  set_can.launch
src/robot_fetch_me_a_beer/poses/: pose_pairs.yaml
src/robot_fetch_me_a_beer/scripts/: detect.py  detect_1.py  manipulate.py  navigate.py  pipeline.py  set_can.py
src/robot_fetch_me_a_beer/srv/: DetectionControl.srv
